--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,5 +9,5 @@ jobs:
       - self-hosted
     steps:
       - name: get code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
     
