--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,4 +10,7 @@ jobs:
     steps:
       - name: get code
         uses: actions/checkout@v3
-    
+      - name: set up jdk 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11   
