--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,10 @@ jobs:
       - name: set up jdk 11
         uses: actions/setup-java@v1
         with:
-          java-version: 11   
+          java-version: 11 
+      - name: set up maven
+        uses: s4u/setup-maven-action@v1
+        run: mvn -V  
       - name: build and package project
         run: mvn -f pom.xml clean package
       - name: show contents of current working directory
