--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11 
+          
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2          
+          
       - name: build and package project
         run: mvn -f pom.xml clean package
       - name: show contents of current working directory
