--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,9 @@ jobs:
       - name: show contents of current working directory
         run: dir
       - name: show contents of target directory
-        run: dir target          
+        run: dir target  
+      - name: Upload Maven build artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: artifact
+          path: ./target/helloworld-0.1.0.war                
