--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,10 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: artifact
-          path: ./target/helloworld-0.1.0.war                
+          path: ./target/helloworld-0.1.0.war  
+      - name: deploy it
+        run: Copy-Item ./target/helloworld-0.1.0.war C:/apache-tomcat-9.0.26/webapps
+      
+          
+
+                 
