--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,9 @@ jobs:
       - name: move war file 
         run: Copy-Item ./target/helloworld.war C:/apache-tomcat-9.0.26/webapps
       - name: go to webapps
-        run: cd C:/apache-tomcat-9.0.26/webapps
+        run: CD C:/apache-tomcat-9.0.26/webapps
+      - name: show contents of target directory
+        run: dir         
       - name: explode war file
         run: jar -xvf helloworld.war
       
