--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,12 @@ jobs:
           path: ./target/helloworld.war  
       - name: move war file 
         run: Copy-Item ./target/helloworld.war C:/apache-tomcat-9.0.26/webapps
-      - name: go to webapps
-        run: Set-Location -Path C:/apache-tomcat-9.0.26/webapps
-      - name: show contents of new directory
-        run: dir         
+      #- name: go to webapps
+      #  run: Set-Location -Path C:/apache-tomcat-9.0.26/webapps
+      #- name: show contents of new directory
+      #  run: dir         
       - name: explode war file
+        working-directory: C:/apache-tomcat-9.0.26/webapps
         run: jar -xvf helloworld.war
       
           
