--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,14 +30,18 @@ jobs:
           name: artifact
           path: ./target/helloworld.war  
       - name: move war file 
-        run: Copy-Item ./target/helloworld.war C:/apache-tomcat-9.0.26/webapps
+        run: |
+          New-Item -ItemType Directory -Path C:/apache-tomcat-9.0.26/webappa/helloworld
+          Copy-Item ./target/helloworld.war C:/apache-tomcat-9.0.26/webapps/helloworld
       #- name: go to webapps
       #  run: Set-Location -Path C:/apache-tomcat-9.0.26/webapps
       #- name: show contents of new directory
       #  run: dir         
       - name: explode war file
-        working-directory: C:/apache-tomcat-9.0.26/webapps
-        run: jar -xvf helloworld.war
+        working-directory: C:/apache-tomcat-9.0.26/webapps/helloworld
+        run: |
+          jar -xvf helloworld.war
+          Remove-Item helloworld.war
       
           
 
