--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,10 @@ jobs:
     runs-on:
       - self-hosted
     steps:
+      - name: set up jdk 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11      
       - name: explode war file
         working-directory: C:/apache-tomcat-9.0.26/webapps/helloworld
         run: |
