--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,11 @@ jobs:
           path: ./target/helloworld.war  
       - name: move war file 
         run: |
-          New-Item -ItemType Directory -Path C:/apache-tomcat-9.0.26/webapps/helloworld
-          Copy-Item ./target/helloworld.war C:/apache-tomcat-9.0.26/webapps/helloworld
-      #- name: go to webapps
-      #  run: Set-Location -Path C:/apache-tomcat-9.0.26/webapps
-      #- name: show contents of new directory
-      #  run: dir         
+          New-Item -ItemType Directory -Path //wjbdevls1/apache-tomcat-9.0.62/webapps/helloworld
+          Copy-Item ./target/helloworld.war //wjbdevls1/apache-tomcat-9.0.62/webapps/helloworld            
+          #New-Item -ItemType Directory -Path C:/apache-tomcat-9.0.26/webapps/helloworld
+          #Copy-Item ./target/helloworld.war C:/apache-tomcat-9.0.26/webapps/helloworld  
+          #\\wjbdevls1\Tomcat9.0.62\webapps    
 
   deploy:
     needs: build
@@ -48,7 +47,8 @@ jobs:
         with:
           java-version: 11      
       - name: explode war file
-        working-directory: C:/apache-tomcat-9.0.26/webapps/helloworld
+        #working-directory: C:/apache-tomcat-9.0.26/webapps/helloworld
+        working-directory: //wjbdevls1/apache-tomcat-9.0.62/webapps/helloworld
         run: |
           jar -xvf helloworld.war
           Remove-Item helloworld.war            
