--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,13 @@ jobs:
     runs-on:
       - self-hosted
     steps:
+      - name: Install git 
+        run: |
+          apt-get install -y git
+          git --version
+          echo "Path is ... $PATH"
+          PATH=$PATH:$(which git)
+          echo "Path is ... $PATH"    
       - name: get code
         uses: actions/checkout@v3
       - name: set up jdk 11
