--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,15 +10,14 @@ jobs:
     steps:
       - name: get code
         uses: actions/checkout@v3    
-      #- name: Install git 
-      #  run: |
-      #    apt-get install -y git
-      #    git --version
-      #    echo "Path is ... $PATH"
-      #    PATH=$PATH:$(which git)
-      #    echo "Path is ... $PATH"   
-      - name: Setup Git for Windows' minimal SDK
-        uses: git-for-windows/setup-git-for-windows-sdk@v1       
+      - name: Install git 
+        run: |
+          apt-get install -y git
+          git --version
+          echo "Path is ... $PATH"
+          #PATH=$PATH:$(which git)
+          #echo "Path is ... $PATH"   
+          
 
       - name: set up jdk 11
         uses: actions/setup-java@v1
