--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,18 +4,22 @@ on:
     branches:
       - master
 jobs:
-  build:
-    runs-on:
-      - self-hosted
+  install:
+    runs-on: ubuntu-latest
     steps:
-  
-      - name: Install git 
+      - name: Install git     
         run: |
           apt-get install -y git
           git --version
           echo "Path is ... $PATH"
           #PATH=$PATH:$(which git)
-          #echo "Path is ... $PATH"   
+          #echo "Path is ... $PATH"     
+
+  build:
+    runs-on:
+      - self-hosted
+    steps:
+  
       - name: get code
         uses: actions/checkout@v3           
 
