--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,14 @@ jobs:
     steps:
       - name: Install git     
         run: |
-          apt-get install -y git
+          sudo apt-get install -y git
           git --version
           echo "Path is ... $PATH"
           #PATH=$PATH:$(which git)
           #echo "Path is ... $PATH"     
 
   build:
+    needs: install
     runs-on:
       - self-hosted
     steps:
