--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,22 +5,19 @@ on:
       - master
 jobs:
   install:
-    runs-on: ubuntu-latest
+    runs-on:
+      - self-hosted
     steps:
-      - name: Install git     
-        run: |
-          sudo apt-get install -y git
-          git --version
-          echo "Path is ... $PATH"
-          PATH=$PATH:$(which git)
-          echo "Path is ... $PATH"     
+      - name: check git version
+        run: echo "Path is ... $PATH"   
 
   build:
     needs: install
     runs-on:
       - self-hosted
     steps:
-  
+      - name: check git version
+        run: echo "Path is ... $PATH"
       - name: get code
         uses: actions/checkout@v3           
 
