--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on:
       - self-hosted
     steps:
-
+      - name: print path
+        run: echo $env:PATH
       - name: get code
         uses: actions/checkout@v3           
 
