--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
     steps:
       - name: move war file 
         run: |
-          New-Item -ItemType Directory -Force -Path //wjbdevls1/Tomcat9.0.62/webapps/helloworld
-          Copy-Item ./target/helloworld.war //wjbdevls1/Tomcat9.0.62/webapps/helloworld            
+          New-Item -ItemType Directory -Force -Path //wjbdevls1/Tomcat 9.0_Tomcat9-Tomcat9.0.98/webapps/helloworld
+          Copy-Item ./target/helloworld.war //wjbdevls1/Tomcat 9.0_Tomcat9-Tomcat9.0.98/webapps/helloworld            
           #New-Item -ItemType Directory -Path C:/apache-tomcat-9.0.26/webapps/helloworld
           #Copy-Item ./target/helloworld.war C:/apache-tomcat-9.0.26/webapps/helloworld  
           #\\wjbdevls1\Tomcat9.0.62\webapps      
@@ -53,7 +53,7 @@ jobs:
           java-version: 11      
       - name: explode war file
         #working-directory: C:/apache-tomcat-9.0.26/webapps/helloworld
-        working-directory: //wjbdevls1/Tomcat9.0.62/webapps/helloworld
+        working-directory: //wjbdevls1/Tomcat 9.0_Tomcat9-Tomcat9.0.98/webapps/helloworld
         run: |
           jar -xvf helloworld.war
           Remove-Item helloworld.war            
